--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -316,7 +316,7 @@ main {
 
 .sidebar {
   margin-bottom: 15px;
-  max-height: 112px;
+  max-height: 185px;
   overflow: hidden;
   transition: var(--transition-2);
 }
@@ -333,6 +333,7 @@ main {
 .avatar-box {
   background: var(--bg-gradient-onyx);
   border-radius: 20px;
+  max-width: 80px;
 }
 
 .info-content .name {
